Fix scrollbar everywhere

--- a/src/public/stylesheets/villagers.css
+++ b/src/public/stylesheets/villagers.css
@@ -1,5 +1,5 @@
 .xlarge {
-    height: 40em; /* Your height here */
+    height: 52em; /* Your height here */
     overflow: auto;
     border-top-color: #b3b3ff;
     border-top-style: solid;
